--- a/src/app/ai-components-layout/ai-components-layout.component.scss
+++ b/src/app/ai-components-layout/ai-components-layout.component.scss
@@ -23,6 +23,8 @@
     --ai-black-opacity-9: rgba(10, 10, 11, 0.9);
     --fs: 12px;
     --fw-normal: 500;
+    --fw-bold: 900;
+    --radius: 5px;
 
     background-color: var(--ai-white);
     height: 100vh;
