--- a/src/app/ai-chat/ai-chat.component.scss
+++ b/src/app/ai-chat/ai-chat.component.scss
@@ -247,6 +247,7 @@
             flex-direction: column;
             gap: 4px;
             box-shadow: 0px 0px 20px -6px rgba(0, 0, 0, 0.1);
+            border-radius: var(--radius);
 
             @media screen and (max-width: 1000px) {
               width: 100%;
@@ -397,6 +398,7 @@
             font-weight: 500;
             font-size: var(--fs);
             color: var(--ai-black);
+            border-radius: var(--radius);
 
             &:hover {
               opacity: .9;
