--- a/src/app/pdf-file-handler/components/pdf-file-sidebar/pdf-file-sidebar.component.scss
+++ b/src/app/pdf-file-handler/components/pdf-file-sidebar/pdf-file-sidebar.component.scss
@@ -34,6 +34,7 @@
         box-sizing: border-box;
         font-weight: 500;
         font-size: var(--fs);
+        border-radius: var(--radius);
   
         .ai-reload-icon {
           fill: var(--ai-white);
@@ -76,6 +77,7 @@
           display: inline-flex;
           align-items: center;
           justify-content: space-between;
+          border-radius: var(--radius);
   
           .ai-pdf-file-handler_download-title {
             font-weight: 500;
@@ -98,11 +100,13 @@
             align-items: center;
             pad: 5px;
             border: none;
-            width: 25px;
-            height: 25px;
+            width: 30px;
+            height: 30px;
             cursor: pointer;
             background-color: transparent;
             transition: background 200ms ease-in-out;
+            border-radius: var(--radius);
+
   
             .ai-download-icon {
               fill: var(--ai-black);
