--- a/src/app/shared/components/confirmation-modal/confirmation-modal.component.scss
+++ b/src/app/shared/components/confirmation-modal/confirmation-modal.component.scss
@@ -11,6 +11,7 @@
     z-index: 1200;
     margin: auto;
     background-color: var(--ai-white);
+    border-radius: var(--radius);
 
     &.ai-open-modal {
       display: flex;
@@ -41,6 +42,7 @@
         background-color: transparent;
         color: var(--ai-black);
         cursor: pointer;
+        border-radius: var(--radius);
 
         &:hover {
           background-color: var(--ai-gray-opacity-2);
@@ -69,6 +71,7 @@
         align-items: center;
         box-sizing: border-box;
         font-weight: 500;
+        border-radius: var(--radius);
 
         svg {
           width: 15px;
@@ -98,6 +101,7 @@
         font-weight: 500;
         font-family: var(--ai-font);
         font-size: var(--fs);
+        border-radius: var(--radius);
 
         &:hover {
           opacity: .9;
