--- a/src/app/file-transcriptor/file-transcriptor.component.html
+++ b/src/app/file-transcriptor/file-transcriptor.component.html
@@ -1,5 +1,6 @@
 <div class="ai-file-transcriptor_main-container">
   <app-file-sidebar
+    class="ai-file_border-sidebar"
     [userid]="userid"
     [isShowSidebar]="isShowSidebar"
     [isUploadCompleted]="isUploadedCompleted"
