--- a/src/app/pdf-file-handler/pdf-file-handler.component.html
+++ b/src/app/pdf-file-handler/pdf-file-handler.component.html
@@ -1,5 +1,6 @@
 <div class="ai-pdf-file-handler_main-container">
   <app-pdf-file-sidebar
+  class="ai-pdf_border-sidebar"
     [userid]="userid"
     [isShowSidebar]="isShowSidebar"
     [isUploadCompleted]="isUploadedCompleted"
