--- a/src/app/ai-chat/components/welcome-view/welcome-view.component.html
+++ b/src/app/ai-chat/components/welcome-view/welcome-view.component.html
@@ -1,18 +1,29 @@
 <div class="ai-chat-welcome_container">
   <h1 class="ai-chat-welcome_title">
-    ¡Bienvenido/a a Tu Asistente de IA!
+    {{ welcomeView ? welcomeView.title : "Bienvenido" }}
   </h1>
 
-  <h2 class="ai-chat-welcome_subtitle">Saludos Cordiales</h2>
+  <h2 class="ai-chat-welcome_subtitle">
+    {{
+      welcomeView
+        ? welcomeView.subtitle
+        : "Chat de Inteligencia Artificial"
+    }}
+  </h2>
   <p class="ai-chat-welcome_text">
-    ¡Hola! Soy tu asistente de IA, listo para ayudarte en lo que necesites.
-    ¿En qué puedo colaborar contigo hoy?
+    {{
+      welcomeView
+        ? welcomeView.description
+        : "Lorem ipsum dolor sit amet consectetur adipisicing elit. "
+    }}
   </p>
 
-  <h2 class="ai-chat-welcome_subtitle">Descubre tu Asistente Personal</h2>
-  <p class="ai-chat-welcome_text">
-    Bienvenido/a a tu asistente personal. Soy un asistente con
-    inteligencia artificial diseñado para hacer tu vida más fácil. ¿Cómo puedo
-    ser de servicio hoy?
+<div *ngIf="welcomeView">
+  <h2 *ngIf="welcomeView.subtitle2" class="ai-chat-welcome_subtitle">
+    {{ welcomeView.subtitle2 }}
+  </h2>
+  <p *ngIf="welcomeView.description2" class="ai-chat-welcome_text">
+    {{ welcomeView.description2 }}
   </p>
+</div>
 </div>
