--- a/src/app/file-transcriptor/components/file-sidebar/file-sidebar.component.scss
+++ b/src/app/file-transcriptor/components/file-sidebar/file-sidebar.component.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    border-right: 1px solid var(--ai-borders);
+    border-right: 1px solid var(--borders);
     gap: 10px;
     box-sizing: border-box;
     position: relative;
@@ -34,26 +34,26 @@
       width: 100%;
       padding: 10px;
       cursor: pointer;
-      color: var(--ai-white);
-      background-color: var(--ai-black);
+      color: var(--secondary-btn-color);
+      background-color: var(--secondary-btn-bg);
       border: none;
       transition: opacity 200ms ease-in-out;
-      font-family: var(--ai-font);
+      font-family: var(--font-family);
       display: inline-flex;
       justify-content: center;
       gap: 10px;
       align-items: center;
       box-sizing: border-box;
       font-weight: 500;
-      font-size: var(--fs);
+      font-size: var(--font-size-base);
       border-radius: var(--radius);
 
       .ai-reload-icon {
-        fill: var(--ai-white);
+        fill: var(--secondary-btn-color);
       }
 
       span {
-        font-size: var(--fs);
+        font-size: var(--font-size-base);
       }
 
       &:hover {
@@ -61,9 +61,10 @@
       }
     }
 
-    .ai-file-transcriptor_result-title{
-      font-size: calc(var(--fs) + 2px);
+    .ai-file-transcriptor_result-title {
+      font-size: calc(var(--font-size-base) + 2px);
       text-align: left;
+      color: var(--container-color);
     }
 
     .ai-file-transcriptor_result-container {
@@ -72,29 +73,19 @@
       flex-direction: column;
       gap: 5px;
 
-      .ai-file-transcriptor_no-results{
-        width: 100%;
-        background-color: var(--ai-gray-opacity-2);
-        color: var(--ai-bhlack);
-        padding: 10px;
-        display: flex;
-        justify-content: center;
-      }
-
       .ai-file-transcriptor_result-file {
         width: 100%;
-        background-color: var(--ai-gray-opacity-2);
-        color: var(--ai-bhlack);
+        background-color: var(--state-bg);
+        color: var(--state-color);
         padding: 10px;
         display: inline-flex;
         align-items: center;
         justify-content: space-between;
         border-radius: var(--radius);
 
-
         .ai-file-transcriptor_download-title {
           font-weight: 500;
-          font-size: var(--fs);
+          font-size: var(--font-size-base);
           display: block;
           overflow: hidden;
           position: relative;
@@ -121,21 +112,19 @@
           border-radius: var(--radius);
 
           .ai-download-icon {
-            fill: var(--ai-black);
+            fill: var(--container-color);
           }
 
           &:hover {
-            background-color: var(--ai-black);
-  
-            .ai-download-icon  {
-              fill: var(--ai-white);
+            background-color: var(--secondary-btn-bg);
+
+            .ai-download-icon {
+              fill: var(--secondary-btn-color);
             }
           }
         }
       }
     }
-
-  
 
     @media screen and (max-width: 1000px) {
       position: fixed;
@@ -147,7 +136,7 @@
       max-height: none;
       top: 0px;
 
-      background-color: var(--ai-white);
+      background-color: var(--container-bg);
 
       &.expanded {
         width: 100%;
@@ -171,10 +160,14 @@
   }
 
   ::-webkit-scrollbar-thumb {
-    background-color: var(--ai-primary);
+    background-color: var(--primary);
   }
 
   ::-webkit-scrollbar-track {
     background-color: transparent;
+  }
+
+  .ai-file-transcriptor_no-results {
+    color: var(--container-color);
   }
 }
