--- a/src/app/file-transcriptor/file-transcriptor.component.scss
+++ b/src/app/file-transcriptor/file-transcriptor.component.scss
@@ -1,6 +1,11 @@
 :host {
+
+  .ai-file_border-sidebar {
+    border-right: 1px solid var(--borders);
+  }
   .ai-file-transcriptor_main-container {
     display: flex;
+    color: var(--container-color);
 
     .ai-file-transcriptor_content {
       box-sizing: border-box;
@@ -47,12 +52,13 @@
         height: min-content;
         margin: auto;
         background-color: transparent;
+        cursor: pointer;
 
         .ai-arrow-icon {
-          fill: var(--ai-borders);
+          fill: var(--borders);
 
           &:hover {
-            fill: var(--ai-black);
+            opacity: .8;
           }
         }
 
@@ -61,20 +67,21 @@
           z-index: 101;
           padding: 10px;
           border-radius: 100%;
-          background-color: var(--ai-black);
+          background-color: var(--secondary-btn-bg);
           left: auto;
           right: 0;
           top: auto;
           bottom: 10vh;
           margin: 10px;
 
+          &:hover {
+            opacity: .9;
+          }
           
           .ai-arrow-icon {
-            fill: var(--ai-white);
+            fill: var(--secondary-btn-color);
 
-            &:hover {
-              fill: var(--ai-borders);
-            }
+       
           }
         }
       }
@@ -86,7 +93,7 @@
         height: 200px;
         padding: 20px;
         text-align: center;
-        border: 1px dashed var(--ai-black);
+        border: 1px dashed var(--container-color);
         position: relative;
         margin: 0 auto;
         display: flex;
@@ -116,15 +123,15 @@
           box-sizing: border-box;
 
           .ai-file-transcriptor_subtitle {
-            font-size: var(--fs);
-            color: var(--ai-black);
+            font-size: var(--font-size-base);
+            color: var(--container-color);
           }
         }
 
         .ai-file-transcriptor_input-label {
-          color: var(--ai-white);
+          color: var(--secondary-btn-color);
           width: max-content;
-          background-color: var(--ai-black);
+          background-color: var(--secondary-btn-bg);
           padding: 8px 16px;
           box-sizing: border-box;
           border-radius: var(--radius);
@@ -148,7 +155,7 @@
           white-space: nowrap;
           text-overflow: ellipsis;
           max-width: 400px;
-          font-size: var(--fs);
+          font-size: var(--font-size-base);
 
           @media screen and (max-width: 1000px) {
             max-width: 200px;
@@ -168,7 +175,7 @@
             justify-content: space-between;
             gap: 10px;
             align-items: center;
-            border: 1px dashed var(--ai-black);
+            border: 1px dashed var(--container-color);
             margin-bottom: 1rem;
             display: flex;
             flex-grow: 1;
@@ -183,15 +190,15 @@
               box-sizing: border-box;
 
               .ai-file-transcriptor_file-name {
-                font-size: var(--fs);
-                color: var(--ai-black);
+                font-size: var(--font-size-base);
+                color: var(--container-color);
                 box-sizing: border-box;
               }
 
               .ai-file-transcriptor_file-size {
-                color: var(--ai-black);
+                color: var(--container-color);
                 margin: 0;
-                font-size: var(--fs);
+                font-size: var(--font-size-base);
                 margin-bottom: 0.25rem;
                 box-sizing: border-box;
               }
@@ -204,15 +211,15 @@
           display: inline-flex;
           justify-content: center;
           align-items: center;
-          background: var(--ai-primary);
-          color: var(--ai-white);
+          background: var(--primary-btn-bg);
+          color: var(--primary-btn-color);
           border: none;
           cursor: pointer;
           padding: 10px;
           transition: background 200ms ease-in-out;
           font-weight: 500;
-          font-family: var(--ai-font);
-          font-size: var(--fs);
+          font-family: var(--font-family);
+          font-size: var(--font-size-base);
           box-sizing: border-box;
           border-radius: var(--radius);
 
@@ -251,7 +258,7 @@
             }
 
             .ai-file-transcriptor_label {
-              font-size: var(--fs);
+              font-size: var(--font-size-base);
               box-sizing: border-box;
             }
 
@@ -259,12 +266,12 @@
               padding: 6px 8px;
               outline: none;
               border-radius: 0;
-              font-family: var(--ai-font);
-              font-size: var(--fs);
-              color: var(--ai-black);
+              font-family: var(--font-family);
+              font-size: var(--font-size-base);
+              color: var(--input-color);
               box-sizing: border-box;
-              border: 1px solid var(--ai-black);
-              background-color: var(--ai-white);
+              border: 1px solid var(--borders);
+              background-color: var(--input-bg);
               border-radius: var(--radius);
 
             }
@@ -287,7 +294,7 @@
   }
 
   .ai-file-transcriptor_label {
-    font-size: var(--fs);
+    font-size: var(--font-size-base);
     box-sizing: border-box;
   }
 
@@ -295,13 +302,18 @@
     padding: 6px 8px;
     outline: none;
     border-radius: 0;
-    font-family: var(--ai-font);
-    font-size: var(--fs);
-    color: var(--ai-black);
+    font-family: var(--font-family);
+    font-size: var(--font-size-base);
+    color: var(--input-color);
     box-sizing: border-box;
-    border: 1px solid var(--ai-black);
-    background-color: var(--ai-white);
+    border: 1px solid var(--borders);
+    background-color: var(--input-bg);
     border-radius: var(--radius);
+
+    &::placeholder {
+      color: var(--input-color);
+      opacity: .5;
+    }
   }
 
 }
@@ -314,11 +326,10 @@
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  color: var(--main-white);
   z-index: 0;
-  font-size: var(--fs);
+  font-size: var(--font-size-base);
   font-weight: 500;
-  color: var(--ai-white);
+  color: var(--white);
   box-sizing: border-box;
 
   @media screen and (max-width: 1000px) {
@@ -339,7 +350,7 @@
   border: none;
 
   .icon {
-    color: var(--ai-white);
+    color: var(--container-bg);
   }
 }
 
