--- a/src/app/pdf-file-handler/components/pdf-file-sidebar/pdf-file-sidebar.component.scss
+++ b/src/app/pdf-file-handler/components/pdf-file-sidebar/pdf-file-sidebar.component.scss
@@ -6,13 +6,14 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      border-right: 1px solid var(--ai-borders);
+      border-right: 1px solid var(--borders);
       gap: 10px;
       box-sizing: border-box;
       position: relative;
       transition: all ease-in-out 400ms;
       overflow-y: scroll;
       max-height: 93svh;
+      background-color: var(--container-bg);
 
       @media screen and (max-width: 1000px) {
         padding-top: 8vh;
@@ -22,26 +23,26 @@
         width: 100%;
         padding: 10px;
         cursor: pointer;
-        color: var(--ai-white);
-        background-color: var(--ai-black);
+        color: var(--secondary-btn-color);
+        background-color: var(--secondary-btn-bg);
         border: none;
         transition: opacity 200ms ease-in-out;
-        font-family: var(--ai-font);
+        font-family: var(--font-family);
         display: inline-flex;
         justify-content: center;
         gap: 10px;
         align-items: center;
         box-sizing: border-box;
         font-weight: 500;
-        font-size: var(--fs);
+        font-size: var(--font-size-base);
         border-radius: var(--radius);
   
         .ai-reload-icon {
-          fill: var(--ai-white);
+          fill: var(--secondary-btn-color);
         }
   
         span {
-          font-size: var(--fs);
+          font-size: var(--font-size-base);
         }
   
         &:hover {
@@ -50,8 +51,9 @@
       }
   
       .ai-pdf-file-handler_result-title{
-        font-size: calc(var(--fs) + 2px);
+        font-size: calc(var(--font-size-base) + 2px);
         text-align: left;
+        color: var(--container-color);
       }
   
       .ai-pdf-file-handler_result-container {
@@ -60,19 +62,12 @@
         flex-direction: column;
         gap: 5px;
   
-        .ai-pdf-file-handler_no-results{
-          width: 100%;
-          background-color: var(--ai-gray-opacity-2);
-          color: var(--ai-bhlack);
-          padding: 10px;
-          display: flex;
-          justify-content: center;
-        }
+
   
         .ai-pdf-file-handler_result-file {
           width: 100%;
-          background-color: var(--ai-gray-opacity-2);
-          color: var(--ai-bhlack);
+          background-color: var(--state-bg);
+          color: var(--state-color);
           padding: 10px;
           display: inline-flex;
           align-items: center;
@@ -81,7 +76,7 @@
   
           .ai-pdf-file-handler_download-title {
             font-weight: 500;
-            font-size: var(--fs);
+            font-size: var(--font-size-base);
             display: block;
             overflow: hidden;
             position: relative;
@@ -109,14 +104,14 @@
 
   
             .ai-download-icon {
-              fill: var(--ai-black);
+              fill: var(--container-color);
             }
   
             &:hover {
-              background-color: var(--ai-black);
+              background-color: var(--secondary-btn-bg);
     
               .ai-download-icon  {
-                fill: var(--ai-white);
+                fill: var(--secondary-btn-color);
               }
             }
           }
@@ -145,7 +140,6 @@
         max-height: none;
         top: 0px;
   
-        background-color: var(--ai-white);
   
         &.expanded {
           width: 100%;
@@ -169,11 +163,15 @@
     }
   
     ::-webkit-scrollbar-thumb {
-      background-color: var(--ai-primary);
+      background-color: var(--primary);
     }
   
     ::-webkit-scrollbar-track {
       background-color: transparent;
+    }
+
+    .ai-pdf-file-handler_no-results{
+      color: var(--container-color);
     }
   }
   
