--- a/src/app/ai-components-layout/ai-components-layout.component.html
+++ b/src/app/ai-components-layout/ai-components-layout.component.html
@@ -1,4 +1,4 @@
-<div class="ai-layout_main-container" [style]="conf?.styles">
+<div class="ai-layout_main-container" [style]="styles ? styles : {}">
   <div class="ai-layout_header">
     <span class="ai-layout_header-title">
       <span class="ai-layout_mobile-title">{{
