--- a/src/app/ai-chat/components/welcome-view/welcome-view.component.html
+++ b/src/app/ai-chat/components/welcome-view/welcome-view.component.html
@@ -1,28 +1,26 @@
 <div class="ai-chat-welcome_container">
   <h1 class="ai-chat-welcome_title">
-    {{
-      welcomeView ? welcomeView.title : " ¡Bienvenido/a a Tu Asistente de IA!"
-    }}
+    {{ conf ? conf.title : " ¡Bienvenido/a a Tu Asistente de IA!" }}
   </h1>
 
   <h2 class="ai-chat-welcome_subtitle">
-    {{ welcomeView ? welcomeView.subtitle : "Saludos Cordiales" }}
+    {{ conf ? conf.subtitle : "Saludos Cordiales" }}
   </h2>
   <p class="ai-chat-welcome_text">
     {{
-      welcomeView
-        ? welcomeView.description
+      conf
+        ? conf.description
         : "¡Hola! Soy tu asistente de IA, listo para ayudarte en lo que necesites.¿En qué puedo colaborar contigo hoy?"
     }}
   </p>
 
   <h2 class="ai-chat-welcome_subtitle">
-    {{ welcomeView ? welcomeView.subtitle2 : "Descubre tu Asistente Personal" }}
+    {{ conf ? conf.subtitle2 : "Descubre tu Asistente Personal" }}
   </h2>
   <p class="ai-chat-welcome_text">
     {{
-      welcomeView
-        ? welcomeView.description2
+      conf
+        ? conf.description2
         : "Bienvenido/a a tu asistente personal. Soy un asistente con inteligencia artificial diseñado para hacer tu vida más fácil. ¿Cómo puedo ser de servicio hoy?"
     }}
   </p>
