--- a/src/app/ai-components-layout/ai-components-layout.component.scss
+++ b/src/app/ai-components-layout/ai-components-layout.component.scss
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
 
 :host {
   *,
@@ -10,75 +9,94 @@
   }
 
   .ai-layout_main-container {
-    --container-bg: #fff;
-    --container-color: #000;
+      // Contenedor principal
+  --container-bg: #fff; // color de fondo
+  --container-color: #000; // color del texto
 
-    --header-bg: #fff;
-    --header-color: #000;
+  // Fondo del chat
+  --chat-bg: #fff; // color de fondo o patron de fondo
 
-    --borders: #b1b1b1;
+  // header (Barra de navegación)
+  --header-bg: #fff; // color de fondo
+  --header-color: #000; // color del texto
+  --header-active-color: #5c4985; // color del menu activo
 
-    --primary: #5c4985;
+  // Bordes o separadores (General)
+  --border-color: #b1b1b1; // color de los bordes
+  --border-width: 2px;
+  --border-style: solid;
 
-    --primary-btn-bg: #5c4985;
-    --primary-btn-color: #fff;
+  // Color principal (General)
+  --primary: #5c4985;
 
-    --secondary-btn-bg: #000;
-    --secondary-btn-color: #fff;
+  // Botones Destacados
+  --primary-btn-bg: #5c4985; // color de fondo
+  --primary-btn-color: #fff; // color del texto
 
-    --warning-btn-bg: #ff3237;
-    --warning-btn-color: #fff;
+  // Botones Secundarios
+  --secondary-btn-bg: #000; // color de fondo
+  --secondary-btn-color: #fff; // color del texto
 
-    --state-bg: rgba(200, 200, 200, 0.2);
-    --state-color: #000;
+  // Boton de confirmación (ventana de confirmacion para eliminar conversaciones del chat)
+  --warning-btn-bg: #f87171; // color de fondo
+  --warning-btn-color: #fff; // color del texto
 
-    --box-shadow: rgba(0, 0, 0, 0.2);
+  // Estado de los elementos activos y seleccionables (Hover, Active)
+  // Ejemplo: conversaciones en el panel izquierdo del chat y demas modulos
+  --state-bg: #f2f2f2; // color de fondo
+  --state-color: #000; // color del texto
 
-    --radius: 5px;
+  // Sombras del chat
+  --box-shadow: rgba(0, 0, 0, 0.4);
 
-    --user-message-bg: rgba(200, 200, 200, 0.2);
-    --user-message-color: #000;
+  // radio de los bordes (border-radius) (General)
+  --radius: 5px;
 
-    --menu-bg: #fff;
-    --menu-color: #000;
+  // Mensajes escritos por el usuario (para destacarlos)
+  --user-message-bg: #f2f2f2; // color de fondo
+  --user-message-color: #000; // color del texto
 
-    --input-bg: #fff;
-    --input-color: #000;
+  // Panel Izquierdo y  Menu de la version mobile
+  --menu-bg: #fff; // color de fondo
+  --menu-color: #000; // color del texto
+
+  // Entradas de texto de los formularios (Inputs)
+  --input-bg: #f2f2f2; // color de fondo
+  --input-color: #000; // color del texto
+
+  // Color del texto en las alertas
+  --white: #fff;
+
+  // Fuentes
+  --font-family: "Roboto", sans-serif; // Tipo de fuente
+  --font-size-base: 12px; // Tamaño de la fuente
+  --font-normal: 500; // Peso normal de la fuente
+  --font-bold: 900; // Peso Fuerte de la fuente
 
   
-
-    --white: #fff;
-
-
-    --font-family: "Roboto", sans-serif;
-
-    --font-size-base: 12px;
-    --font-normal: 500;
-    --font-bold: 900;
-
-    background-color: var(--container-bg);
+    background: var(--container-bg);
     height: 100vh;
     overflow: hidden;
     font-family: var(--font-family);
     font-size: var(--font-size-base);
     box-sizing: border-box;
-    border: 1px solid var(--borders);
+    border: var(--border-width) var(--border-style) var(--border-color);
     font-weight: var(--font-normal);
 
-      // Icons
-      .ai-x-icon {
-        fill: var(--container-color);
-      }
-  
-      .ai-cloud-icon {
-        fill: var(--container-color);
-        width: 80px;
-        height: 80px;
-      }
-  
-      .ai-file-icon {
-        fill: var(--container-color);
-      }
+    // Icons
+    .ai-x-icon {
+      fill: var(--container-color);
+    }
+
+    .ai-cloud-icon {
+      fill: var(--container-color);
+      width: 80px;
+      height: 80px;
+    }
+
+    .ai-file-icon {
+      fill: var(--container-color);
+    }
 
     .ai-layout_header {
       height: 7vh;
@@ -86,10 +104,10 @@
       justify-content: space-between;
       align-items: center;
       padding: 0 15px;
-      border-bottom: 1px solid var(--borders);
+      border-bottom: var(--border-width) var(--border-style) var(--border-color);
       box-sizing: border-box;
       color: var(--header-color);
-      background-color: var(--header-bg);
+      background: var(--header-bg);
 
       @media screen and (max-width: 1000px) {
         padding: 0 10px;
@@ -206,12 +224,12 @@
           font-family: var(--font-family);
 
           &:hover {
-            border-bottom-color: var(--borders);
+            border-bottom-color: var(--border-color);
           }
 
           &.active {
-            border-bottom-color: var(--primary);
-            color: var(--primary);
+            border-bottom-color: var(--header-active-color);
+            color: var(--header-active-color);
           }
         }
       }
