--- a/src/app/file-transcriptor/file-transcriptor.component.scss
+++ b/src/app/file-transcriptor/file-transcriptor.component.scss
@@ -1,7 +1,8 @@
 :host {
 
   .ai-file_border-sidebar {
-    border-right: 1px solid var(--borders);
+    border-right: var(--border-width) var(--border-style) var(--border-color);
+    background: var(--menu-bg);
   }
   .ai-file-transcriptor_main-container {
     display: flex;
@@ -55,7 +56,7 @@
         cursor: pointer;
 
         .ai-arrow-icon {
-          fill: var(--borders);
+          fill: var(--border-color);
 
           &:hover {
             opacity: .8;
@@ -270,7 +271,7 @@
               font-size: var(--font-size-base);
               color: var(--input-color);
               box-sizing: border-box;
-              border: 1px solid var(--borders);
+              border: var(--border-width) var(--border-style) var(--border-color);
               background-color: var(--input-bg);
               border-radius: var(--radius);
 
@@ -306,7 +307,7 @@
     font-size: var(--font-size-base);
     color: var(--input-color);
     box-sizing: border-box;
-    border: 1px solid var(--borders);
+    border: var(--border-width) var(--border-style) var(--border-color);
     background-color: var(--input-bg);
     border-radius: var(--radius);
 
