--- a/src/app/pdf-file-handler/components/pdf-file-sidebar/pdf-file-sidebar.component.scss
+++ b/src/app/pdf-file-handler/components/pdf-file-sidebar/pdf-file-sidebar.component.scss
@@ -6,14 +6,15 @@
       flex-direction: column;
       justify-content: flex-start;
       align-items: center;
-      border-right: 1px solid var(--borders);
+      border-right: var(--border-width) var(--border-style) var(--border-color);
       gap: 10px;
       box-sizing: border-box;
       position: relative;
       transition: all ease-in-out 400ms;
       overflow-y: scroll;
       max-height: 93svh;
-      background-color: var(--container-bg);
+      background: var(--menu-bg);
+      color: var(--menu-color);
 
       @media screen and (max-width: 1000px) {
         padding-top: 8vh;
@@ -53,7 +54,7 @@
       .ai-pdf-file-handler_result-title{
         font-size: calc(var(--font-size-base) + 2px);
         text-align: left;
-        color: var(--container-color);
+        color: var(--menu-color);
       }
   
       .ai-pdf-file-handler_result-container {
@@ -104,7 +105,7 @@
 
   
             .ai-download-icon {
-              fill: var(--container-color);
+              fill: var(--state-color);
             }
   
             &:hover {
@@ -171,7 +172,7 @@
     }
 
     .ai-pdf-file-handler_no-results{
-      color: var(--container-color);
+      color: var(--menu-color);
     }
   }
   
