--- a/src/app/shared/components/confirmation-modal/confirmation-modal.component.scss
+++ b/src/app/shared/components/confirmation-modal/confirmation-modal.component.scss
@@ -12,7 +12,7 @@
     margin: auto;
     background-color: var(--container-bg);
     border-radius: var(--radius);
-    border: 1px solid var(--borders);
+    border: var(--border-width) var(--border-style) var(--border-color);
 
     &.ai-open-modal {
       display: flex;
@@ -29,7 +29,7 @@
       overflow: hidden;
       height: 20px;
       padding: 20px 10px;
-      border-bottom: 1px solid var(--borders);
+      border-bottom: var(--border-width) var(--border-style) var(--border-color);
 
       .ai-confirmation-modal_header-title {
         color: var(--container-color);
