--- a/src/app/ai-chat/ai-chat.component.scss
+++ b/src/app/ai-chat/ai-chat.component.scss
@@ -199,7 +199,7 @@
         justify-content: space-between;
         box-shadow: inset 0px 0px 20px -6px var(--box-shadow);
         border-bottom: var(--border-width) var(--border-style) var(--border-color);
-        background: var(--chat-bg);
+        background: var(--container-bg);
 
         .ai-chat_messages-container {
           width: 80%;
